// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Actions All types 1`] = `
Array [
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Array
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Boolean
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Empty Object
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    File
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Function A
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Bound Function B
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Infinity
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    -Infinity
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    NaN
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    null
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Number
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Multiple
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Plain Object
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Object (depth: 2)
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    RegExp
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    String
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Symbol
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    SyntheticEvent
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    undefined
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Window
  </button>,
]
`;

exports[`Storyshots Addons|Actions Basic example 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Circular Payload 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Circular Payload
</button>
`;

exports[`Storyshots Addons|Actions Decorated action + config 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Decorated action 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Decorated actions + config 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Decorated actions 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Limit Action Output 1`] = `
Array [
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    False
  </button>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    True
  </button>,
]
`;

exports[`Storyshots Addons|Actions Multiple actions + config 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions as object 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions, object + config 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Persisting the action logger 1`] = `
Array [
  <p>
    Moving away from this story will persist the action logger
  </p>,
  <button
    class="css-1pzmux7-Button e1iqivjq3"
  >
    Object (configured clearOnStoryChange: false)
  </button>,
]
`;

exports[`Storyshots Addons|Actions Reserved keyword as name 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Delete
</button>
`;

exports[`Storyshots Addons|Actions configureActionsDepth 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Object (configured depth: 2)
</button>
`;

exports[`Storyshots Addons|Actions.deprecated Decorated Action 1`] = `
<button
  class="css-1pzmux7-Button e1iqivjq3"
>
  Native Event
</button>
`;
